# Adatszerkezetek

11ora edeny/: CMakeLists.txt  main.cpp
1ora/fifo/: CMakeLists.txt  FixedQueue.cpp  FixedQueue.h  fifo.cbp  fifo.layout  main.cpp
1ora/lifo/: FixedStach.cpp  FixedStack.h  lifo.cbp  lifo.depend  lifo.layout  main.cpp
1ora/teszt/: main.cpp  teszt.cbp  teszt.layout
3ora/: hibak.txt  template.txt
OOP/: Bike.h  Bus.h  CMakeLists.txt  Taxi.h  Vehicle.h  car.h  main.cpp
buborekrendezes/: CMakeLists.txt  main.cpp
gyak1/fifo/: main.cpp  (+3 more)
hf1/: bracketchecker.cpp  bracketchecker.h  main.cpp  mystack.cpp  mystack.h
hf2/lengyel/: CMakeLists.txt  DynamicIntStack.h  PolishNotation.cpp  PolishNotation.h  lengyel.rar  main.cpp  woodpecker.hpp
hf7/: CMakeLists.txt  sparsematrix.hpp  woodpecker.hpp
hf8/: CMakeLists.txt  graphsolver.hpp  main.cpp
hf9/: CMakeLists.txt  main.cpp  merge3way.hpp
ora10negyzetrendez/: CMakeLists.txt  main.cpp  quicksort.hpp  sorts.hpp
ora5/: CMakeLists.txt  avltree.h  exceptions.h  main.cpp
ora6 piros fekete/: CMakeLists.txt  exceptions.h  main.cpp  rb_tree.h
ora7 hasitas lancolt/: CMakeLists.txt  hashtable.h  main.cpp
ora7 hasitas nyilt/: hashtable.h  main.cpp
ora8 rendezok/: CMakeLists.txt
ora9_kupacrendez2/: CMakeLists.txt  heap_sort.hpp  main.cpp  timer.hpp
ora9_kupacrendezok/: CMakeLists.txt  heap.hpp  heap_exceptions.hpp  main.cpp  pqueue.hpp
ora9_osszefesulo/: CMakeLists.txt  main.cpp
potzh/: CMakeLists.txt  FixedSor.h  FixedVerem.h  main.cpp
shakesort/: CMakeLists.txt  main.cpp
teszt1/: CMakeLists.txt  main.cpp
(+47 files in other folders)
